tests/errors/default_nonliteral.vt
fn f(a: int = 1 + 2) {} fn main(){}
